Fix rendering problem when zooming on Safari

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -155,7 +155,6 @@
 
 .pdfViewer .page canvas {
   margin: 0;
-  display: block;
 }
 
 .pdfViewer .page canvas .structTree {
